<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.calculator.user.calculator.MainActivity">

    <FrameLayout
        android:id="@+id/resultlayout"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="210dp">

        <EditText
            android:id="@+id/resulttext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="none"
            android:background="@color/white"
            android:textIsSelectable="true"
            android:gravity="right"
            android:textSize="65sp" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/linearlayout2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="78dp">

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:textSize="35sp"
            android:gravity="center"
            android:text="@string/clear" />

        <Button
            android:id="@+id/modulus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/modulus" />

        <Button
            android:id="@+id/squareroot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/squareroot" />

        <Button
            android:id="@+id/division"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/division"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/seven"
            android:textSize="35sp" />

        <Button
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/eight"
            android:textSize="35sp" />


        <Button
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/nine"
            android:textSize="35sp" />

        <Button
            android:id="@+id/multiplication"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/multiplication"
            android:textSize="35sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/four"
            android:textSize="35sp" />

        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/five"
            android:textSize="35sp" />

        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/six"
            android:textSize="35sp" />
        <Button
            android:id="@+id/substraction"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:gravity="center"
            android:background="@color/blue"
            android:text="@string/substraction" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/one"
            android:textSize="35sp" />

        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/two"
            android:textSize="35sp" />

        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/three"
            android:textSize="35sp" />
        <Button
            android:id="@+id/addition"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:gravity="center"
            android:background="@color/blue"
            android:text="@string/addition" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout6"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <Button
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="35sp" />

        <Button
            android:id="@+id/dot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/dot" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/delete" />
        <Button
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35sp"
            android:gravity="center"
            android:background="@color/blue"
            android:text="@string/result" />
    </LinearLayout>
</LinearLayout>
